--- a/main.html
+++ b/main.html
@@ -1,16 +1,25 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Money Use Lists</title>
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+    <!-- Ordered List: Items to buy with salary -->
+    <h2>Things I want to buy with my salary</h2>
+    <ol>
+        <li data-ns-test="shoppingList">Laptop</li>
+        <li data-ns-test="shoppingList">Smartphone</li>
+        <li data-ns-test="shoppingList">Gaming Console</li>
+    </ol>
 
+    <!-- Unordered List: Holiday destinations -->
+    <h2>Holiday destinations I want to visit</h2>
+    <ul>
+        <li data-ns-test="holidayList">Japan</li>
+        <li data-ns-test="holidayList">Switzerland</li>
+        <li data-ns-test="holidayList">Australia</li>
+    </ul>
 </body>
-
 </html>
